# trivy-test-ghas

./: Dockerfile  README.md  pyproject.toml  trivy-results.sarif
.github/workflows/: dependency-review.yml  trivy-line-adjust.yml  trivy.yml
line_mapper/: line_mapper.py  updated_report.sarif
