[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ghast"
version = "0.1.0"
description = "GHAS Testing"
readme = "README.md"
authors = ["austimkelly"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
cowsay = "~=6.1"
# AGPL licensed (suggested from Copilot X chat
odoo = "^14.0"
erpnext = "^12.14.0"
flask-oidc-ex = "^0.2.2"
flask-autoindex = "^0.6"
flask-appbuilder = "^3.3.2"
flask-babelex = "^0.9.4"
invenio-base = "^1.2.4"
invenio-celery = "^1.2.3"
invenio-config = "^1.0.3"
invenio-i18n = "^1.2.0"
invenio-rest = "^1.2.5"
invenio-records = "^1.3.2"


# The following are python libraries with security vulnerabilities in them
# for testing testing SAST tools like GHAS, Dependabot, Trivy, Snyk, bandit, etc
# - alerts on unverified requests e.g., `requests.get(url, verify=False)`
requests = "~=2.31"
# - pycrypto is abandonware and very insecure
pycrypto = "=2.6.0"
# - cryptography<38 has 4 known _fixable_ high severity vulns, here's 1/4:
# - https://security.snyk.io/vuln/SNYK-PYTHON-CRYPTOGRAPHY-3112177
cryptography = "<38"
# - flask-caching==1.11.1 has 1 PoC (unfixable) high severity vuln:
# - https://security.snyk.io/vuln/SNYK-PYTHON-FLASKCACHING-1292339
flask-caching = "==1.11.1"
# from GHSA database
gevent = "23.7"
paramiko = "2.0.0"
langchain = "0.0.170"

[tool.poetry.scripts]
ghast = "ghast:cli"
