[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "ghas-testing"
version = "0.1.0"
description = "GHAS Testing"
readme = "README.md"
authors = ["austimkelly"]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"

# #### AGPL ####
# https://github.com/tesla-ce/python-client/blob/main/LICENSE
tesla-ce-client = "^0.1.0"
# https://github.com/yuvallanger/meditate/blob/master/LICENSE.txt
meditate = "^0.0.4"

# ####### GPL 3.0 ########
# GPL 3.0: https://github.com/VaasuDevanS/cowsay-python/blob/main/LICENSE
cowsay = "~=6.1"
 # https://github.com/frappe/erpnext/blob/develop/license.txt
erpnext = "^12.14.0"
# https://github.com/ultralytics/ultralytics/blob/main/LICENSE
ultralytics = "^8.1.27"

# No specific license https://github.com/dpgaspar/Flask-AppBuilder/blob/master/LICENSE
flask-appbuilder = "^3.3.2"
# No specific license specified: https://github.com/python-babel/flask-babel/blob/master/LICENSE
flask-babelex = "^0.9.4"

# ##### BSD 3 ######
# BSD 3 license: https://github.com/lepture/authlib/blob/master/LICENSE
authlib = "^0.15.3"
# #### No specific license found ########
# BSD 3  https://github.com/blaze/odo/blob/master/LICENSE.txt
odoo = "^14.0" 

# ##### BSD 2 #####
# https://github.com/larsw/flask-oidc-ex/blob/master/LICENSE.txt
flask-oidc-ex = "^0.2.2"

# #### MIT #####
# https://github.com/general03/flask-autoindex/blob/master/LICENSE.md
flask-autoindex = "^0.6"
# https://github.com/inveniosoftware/invenio-base/blob/master/LICENSE
invenio-base = "^1.2.4"
# MIT: https://github.com/inveniosoftware/invenio-celery/blob/master/LICENSE
invenio-celery = "^1.2.3"
# MIT: https://github.com/inveniosoftware/invenio-config/blob/master/LICENSE
invenio-config = "^1.0.3"


# The following are python libraries with security vulnerabilities in them
# for testing testing SAST tools like GHAS, Dependabot, Trivy, Snyk, bandit, etc
# - alerts on unverified requests e.g., `requests.get(url, verify=False)`
requests = "~=2.31"
# - pycrypto is abandonware and very insecure
pycrypto = "=2.6.0"
# - cryptography<38 has 4 known _fixable_ high severity vulns, here's 1/4:
# - https://security.snyk.io/vuln/SNYK-PYTHON-CRYPTOGRAPHY-3112177
cryptography = "<38"
# - flask-caching==1.11.1 has 1 PoC (unfixable) high severity vuln:
# - https://security.snyk.io/vuln/SNYK-PYTHON-FLASKCACHING-1292339
flask-caching = "==1.11.1"
# from GHSA database
gevent = "23.7"
paramiko = "2.0.0"
langchain = "0.0.170"
